--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "Dinh Dai Luc B1910100",
+  "author": "Nguyen Thanh Luan - B1910098",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
